added all main pages not articles
all except prebuilts and new as i am not going to add them now

--- a/gamerapp/templates/base.html
+++ b/gamerapp/templates/base.html
@@ -42,31 +42,31 @@
                   <img src="{% static 'images/logo.png' %}" alt="">
                 </div> {% endcomment %}
                 <div class="row">
-                  <a href="{% url "pc-components-buying-guide" %}"><header class="menu-header">Best PC components</header></a>
+                  <a href="{% url "pc-components-buying-guides" %}"><header class="menu-header">Best PC components</header></a>
                   <ul class="mega-links" style="margin-bottom:20px;">
-                    <li><a href="{% url "coming-soon" %}">CPUs</a></li>
-                    <li><a href="{% url "coming-soon" %}">CPU Coolers</a></li>
-                    <li><a href="{% url "coming-soon" %}">GPUs</a></li>
-                    <li><a href="{% url "coming-soon" %}">Motherboards</a></li>
-                    <li><a href="{% url "coming-soon" %}">Ram</a></li>
-                    <li><a href="{% url "coming-soon" %}">SSDs</a></li>
-                    <li><a href="{% url "coming-soon" %}">PSUs</a></li>
-                    <li><a href="{% url "coming-soon" %}">Cases</a></li>
+                    <li><a href="{% url "cpu-buying-guides" %}">CPUs</a></li>
+                    <li><a href="{% url "cpu-coolers-buying-guides" %}">CPU Coolers</a></li>
+                    <li><a href="{% url "gpu-buying-guides" %}">GPUs</a></li>
+                    <li><a href="{% url "motherboards-buying-guides" %}">Motherboards</a></li>
+                    <li><a href="{% url "ram-buying-guides" %}">Ram</a></li>
+                    <li><a href="{% url "ssd-buying-guides" %}">SSDs</a></li>
+                    <li><a href="{% url "psu-buying-guides" %}">PSUs</a></li>
+                    <li><a href="{% url "cases-buying-guides" %}">Cases</a></li>
                   </ul>
                 </div>
                 <div class="row">
-                  <a href="{% url "gaming-peripherals-buying-guide" %}"><header class="menu-header">Best Gaming Peripherals</header></a>
+                  <a href="{% url "gaming-peripherals-buying-guides" %}"><header class="menu-header">Best Gaming Peripherals</header></a>
                   <ul class="mega-links  margin-top-100">
-                    <li><a href="{% url "coming-soon" %}">Keyboards</a></li>
-                    <li><a href="{% url "coming-soon" %}">Mouse</a></li>
-                    <li><a href="{% url "coming-soon" %}">Monitors</a></li>
-                    <li><a href="{% url "coming-soon" %}">Headsets</a></li>
-                    <li><a href="{% url "coming-soon" %}">Mouse Pads</a></li>
-                    <li><a href="{% url "coming-soon" %}">Gaming Chairs</a></li>
+                    <li><a href="{% url "keyboards-buying-guides" %}">Keyboards</a></li>
+                    <li><a href="{% url "mouse-buying-guides" %}">Mouse</a></li>
+                    <li><a href="{% url "monitors-buying-guides" %}">Monitors</a></li>
+                    <li><a href="{% url "headsets-buying-guides" %}">Headsets</a></li>
+                    <li><a href="{% url "mouse-pads-buying-guides" %}">Mouse Pads</a></li>
+                    <li><a href="{% url "gaming-chairs-buying-guides" %}">Gaming Chairs</a></li>
                   </ul>
                 </div>
                 <div class="row">
-                  <a href="{% url "gaming-laptops-buying-guide" %}"><header class="menu-header">Best Gaming Laptops</header></a>
+                  <a href="{% url "gaming-laptops-buying-guides" %}"><header class="menu-header">Best Gaming Laptops</header></a>
                   <ul class="mega-links"  style="margin-top:-180px;">
                     <li><a href="{% url "coming-soon" %}"></a></li>
 
