--- a/gamerapp/templates/buying_guides/pc_components/gpu_buying_guide.html
+++ b/gamerapp/templates/buying_guides/pc_components/gpu_buying_guide.html
@@ -5,14 +5,14 @@
 <div style="position: relative; display: inline-block;width:100%;margin-bottom:-40px;">
     <img class="card-img-top" src="{% static 'images/buying_guide/buying_guide.jpg' %}" alt="..." />
     <div style="position: absolute; top: 5px; left: -10px; width: 100%; text-align: center;">
-        <p class="pc-builds-header" style="font-size:35px;">Headsets Buying Guides</p>
+        <p class="pc-builds-header" style="font-size:35px;">GPU Buying Guides</p>
     </div>
 </div>  
 <div class="mt-5 categroies-div">      
     {% comment %} <center><h2>Sub-subcategories: <a href="#">Keyboards</a> | <a href="#">Mouse</a> | <a href="#">Monitors</a> | <a href="#">Headsets</a> | <a href="#">Mouse Pads</a> | <a href="#">Gaming Chairs</a></h2></center> {% endcomment %}
     <br><br>
     <div class="row">
-        {% for guide in headset_buying_guides %}
+        {% for guide in gpu_buying_guides %}
         <div style="padding-bottom:30px;" class="col-lg-3">
             <div>
                 <a href="{% url guide.slug %}" onmouseover="zoomImage(this)" onmouseout="unzoomImage(this)"><img style="border-radius: 5px;" class="card-img-top" src="{{guide.image.url}}" alt="..." /></a>
