--- a/gamerapp/templates/buying_guides/gaming_peripherals/gaming_peripherals.html
+++ b/gamerapp/templates/buying_guides/gaming_peripherals/gaming_peripherals.html
@@ -9,19 +9,19 @@
     </div>
 </div>  
 <div class="mt-5 categroies-div">      
-    <center><h2>Sub-subcategories: <a href="#">Best Keyboards</a> | <a href="#">Best Mouse</a> | <a href="#">Best Monitors</a> | <a href="#">Best Headsets</a> | <a href="#">Best Mouse Pads</a> | <a href="#">Best Gaming Chairs</a></h2></center>
+    <center><h2>Sub-subcategories: <a href="{% url "keyboards-buying-guides" %}">Best Keyboards</a> | <a href="{% url "mouse-buying-guides" %}">Best Mouse</a> | <a href="{% url "monitors-buying-guides" %}">Best Monitors</a> | <a href="{% url "headsets-buying-guides" %}">Best Headsets</a> | <a href="{% url "mouse-pads-buying-guides" %}">Best Mouse Pads</a> | <a href="{% url "gaming-chairs-buying-guides" %}">Best Gaming Chairs</a></h2></center>
     <br><br><br><br>
     <div class="row">
-        {% for review in gaming_peripherals_buying_guides %}
+        {% for guide in gaming_peripherals_buying_guides %}
         <div style="padding-bottom:30px;" class="col-lg-3">
             <div>
-                <a href="{% url review.slug %}" onmouseover="zoomImage(this)" onmouseout="unzoomImage(this)"><img style="border-radius: 5px;" class="card-img-top" src="{{review.image.url}}" alt="..." /></a>
+                <a href="{% url guide.slug %}" onmouseover="zoomImage(this)" onmouseout="unzoomImage(this)"><img style="border-radius: 5px;" class="card-img-top" src="{{guide.image.url}}" alt="..." /></a>
                 <div class="card-body">
-                    <a class="badge bg-secondary text-decoration-none link-light" style="font-size:10px" href="{% url review.sub_category.slug %}">{{review.sub_category.name|upper}}</a>
-                    <a class="badge bg-secondary text-decoration-none link-light" style="font-size:10px" href="{% url review.main_category.slug %}">{{review.main_category.name|upper}}</a><br>
+                    <a class="badge bg-secondary text-decoration-none link-light" style="font-size:10px" href="{% url guide.sub_category.slug %}">{{guide.sub_category.name|upper}}</a>
+                    <a class="badge bg-secondary text-decoration-none link-light" style="font-size:10px" href="{% url guide.main_category.slug %}">{{guide.main_category.name|upper}}</a><br>
                     <div style="margin-bottom:7px"></div>
-                    <a href="{% url review.slug %}" style="font-size:20px;" class="card-title h4 review-link">{{review.topic}}</a>
-                    <div class="small text-muted"><img src="{% static 'images/calendar.png' %}" alt="Calendar Icon" width="15" height="15" style="margin-bottom: 3px; margin-right: 5px;"> {{review.date_created|time_ago_format}}</div>
+                    <a href="{% url guide.slug %}" style="font-size:20px;" class="card-title h4 review-link">{{guide.topic}}</a>
+                    <div class="small text-muted"><img src="{% static 'images/calendar.png' %}" alt="Calendar Icon" width="15" height="15" style="margin-bottom: 3px; margin-right: 5px;"> {{guide.date_created|time_ago_format}}</div>
                 </div>
             </div>
         </div>
